add meta tags for search engines

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta tags for search engines-->
+    <meta name="description" content="loving running. Club for runner in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park.">
+    <meta name="keywords" content="love running, run, running club runner, Ireland, Dublin, sport,exercise>
+
+    <!-- Title -->
     <title>love Running</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
