--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--meta tags for search engines-->
     <meta name="description" content="loving running. Club for runner in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park.">
-    <meta name="keywords" content="love running, run, running club runner, Ireland, Dublin, sport,exercise>
+    <meta name="keywords" content="love running, run, running club runner, Ireland, Dublin, sport,exercise">
 
     <!-- Title -->
     <title>love Running</title>
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -21,6 +22,15 @@
 </head>
 
 <body>
+    <header>
+        <h1>Header</h1>
+    </header>
+
+    <p> main Content</p>
+
+    <footer>
+        <p>&copy; 2023 Love Running</p>
+    </footer>
 
 </body>
 
