add intial style to css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Header</h1>
     </header>
 
-    <p> main Content</p>
+    <p> main content</p>
 
     <footer>
         <p>&copy; 2023 Love Running</p>
