Push footer down using flex style

--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
 </head>
 
 <body>
+    <!-- Header -->
+
     <header>
         <h1>Header</h1>
     </header>
 
-    <p> main content</p>
+    
+    <!-- Main Content -->
+    <main> Main Content </main>
+
+
+    <!-- Footer -->
 
     <footer>
         <p>&copy; 2023 Love Running</p>
