Display navbar items, hide toggle label. favicon is working again. All good point to start again

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <title>love Running</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-
+<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+<link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
+   
+<!-- CSS Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
 
@@ -36,8 +38,8 @@
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">X</label>
 
-        <nav id="menu">
-            <ul>
+        <nav>
+            <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Sign Up</a></li>
