Add social media link, with icons

--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
     <title>love Running</title>
 
     <!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-<link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
-   
-<!-- CSS Stylesheet -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
+
+    <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-
-
-
 
 
 </head>
@@ -55,9 +52,22 @@
     <!-- Footer -->
 
     <footer>
+        <ul>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter profile (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram profile (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+        </ul>
+
         <p>&copy; 2023 Love Running</p>
     </footer>
 
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/b15a7a1def.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
