--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </a>
 
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
 
         <nav>
             <ul id="menu">
@@ -52,7 +52,8 @@
     <!-- Footer -->
 
     <footer>
-        <ul>
+        <ul id="social-networks">
+            
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://twitter.com" target="_blank" rel="noopener"
