--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,7 @@
 
         <nav>
             <ul id="menu">
-                <li><a href="index.html" >Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
@@ -55,13 +55,17 @@
         <ul id="social-networks">
 
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
             <li><a href="https://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter profile (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
+                    aria-label="Visit our Twitter profile (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram profile (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+                    aria-label="Visit our Instagram profile (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a></li>
             <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our YouTube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+                    aria-label="Visit our YouTube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
         </ul>
 
         <p>&copy; 2023 Love Running</p>
