--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
 
     <!-- Main Content -->
-    <main> Main Content </main>
+    <main> 
+        <section id="hero"> </section> 
+    </main>
 
 
     <!-- Footer -->
