--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
 
     <!-- Main Content -->
     <main> 
-        <section id="hero"> </section> 
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin docklands & Phoenix Park</h3>
+            </div>
+        </section> 
     </main>
 
 
