--- a/index.html
+++ b/index.html
@@ -91,12 +91,53 @@
                     <p>When we run with others, we can run farther and faster more easily. Social running can pull you
                         out of a running funk or low mood, and inspire you to try new events.</p>
                 </div>
-             </div>
-             <div id="benefits-image">
+            </div>
+            <div id="benefits-image">
                 <div id="circle-cover-bg"></div>
-             </div>
+            </div>
             </div>
         </section>
+        <!--Meetup times section-->
+        <section id="meetup-times">
+            <h2>MEETUP TIMES</h2>
+            <div id="times">
+                <div>
+                    <h3>URBAN <i class="fa-solid fa-building"></i></h3>
+                    <p>Monday</p>
+                    <p>5K</p>
+                    <p>The Marker Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>TRAIL <i class="fa-solid fa-tree"></i></h3>
+                    <p>Wednesday</p>
+                    <p>10K</p>
+                    <p> The Phoenix Park</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>URBAN <i class="fa-solid fa-building"></i></h3>
+                    <p>Friday</p>
+                    <p>5K</p>
+                    <p>The Marker Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>TRAIL <i class="fa-solid fa-tree"></i></h3>
+                    <p>Saturday</p>
+                    <p>10K</p>
+                    <p>The Phoenix Park</p>
+                    <p>9:30</p>
+                </div>
+                <div>
+                    <h3>COFFEE <i class="fa-solid fa-coffee"></i></h3>
+                    <p>Sunday</p>
+                    <p>0K</p>
+                    <p>The Marker Hotel</p>
+                    <p>11:30</p>
+                </div>
+        </section>
+
     </main>
 
 
