Style meetup times section in css

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
                     <p>The Marker Hotel</p>
                     <p>11:30</p>
                 </div>
+            
+                </div>
         </section>
 
     </main>
