Hide section heading with utility class

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </section>
         <!--Meetup times section-->
         <section id="meetup-times">
-            <h2>MEETUP TIMES</h2>
+            <h2 class="hidden-heading">MEETUP TIMES</h2>
             <div id="times">
                 <div>
                     <h3>URBAN <i class="fa-solid fa-building"></i></h3>
