update gallery page for large screen

--- a/gallery.html
+++ b/gallery.html
@@ -60,6 +60,10 @@
                 alt="Large group of runners taking part in a marathon on a rainy day">
             <img src="assets/images/mud-run.webp"
                 alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+            <img src="assets/images/man-and-woman-runner.webp" alt="man and woman runner together">
+            <img src="assets/images/group-people-exercising-together-outdoors.webp" alt="group people exercising together outdoors">
+            <img src="assets/images/full-shot-people-training-together.webp" alt="full people training together outdoors">
+
         </section>
     </main>
 
@@ -83,7 +87,7 @@
             </li>
         </ul>
 
-        <p>&copy; 2023 Love Running</p>
+
     </footer>
 
     <!-- Font Awesome kit -->
